Change name from aoa back to doa.
It makes more sense because we are talking about 2 angles, so direction
is a better description.

--- a/live_app/Makefile
+++ b/live_app/Makefile
@@ -202,7 +202,7 @@ src/gecko_bglib.cpp \
 src/main.cpp \
 src/bg.cpp \
 src/aox.cpp \
-../src/aoa/estimator.cpp
+../src/doa/estimator.cpp
 
 # this file should be the last added
 C_SRC += src/uart_posix.cpp
